--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,8 +8,14 @@
      ~/.zshrc: zshrc 
      ~/.gitconfig: gitconfig
      ~/.vimrc: vimrc
+     ~/.config/karabiner/karabiner.json: karabiner 
 - create:
     - ~/downloads
 
-      #- shell:
+- shell:
 # - [git submodule update --init --recursive, Installing submodules]
+  - echo "hey guys"
+  - 
+    command: ./test.zsh
+    stdout: true
+    stderr: true
