--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 .DS_Store
-Alfred/Alfred.alfredpreferences
 *.alfdb
-Alfred/*
-config/nvim/plugged/AutoComplPop/
-vscode/extensions/ms-python.python-2022.4.1/pythonFiles/
+config/nvim/plugged/
+config/coc/
+config/lvim/
+Alfred/Alfred.alfredpreferences
 vscode/
-Alfred/powerpack*
-Alfred/Alfred.alfredpreferences/snippets/
-Alfred/Alfred.alfredpreferences/snippets/
