update yaml config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,15 +8,14 @@
      ~/.zshrc: zshrc 
      ~/.gitconfig: gitconfig
      ~/.config/karabiner/karabiner.json: config/karabiner.json
-     ~/.config/nvim/init.vim: vimrc
-     ~/vimrc: vimrc
+     ~/.config/nvim/init.lua: config/nvim/init.lua 
      ~/.vscode: vscode/
      ~/Library/Application Support/Alfred: alfred/
      ~/.config/rstudio/themes/joestheme.rstheme: config/rstudio/themes/joestheme.rstheme
      ~/.config/rstudio/rstudio-prefs.json: config/rstudio/rstudio-prefs.json
      
 - create:
-    - ~/downloads
+    - ~/.config/nvim/
 
 - shell:
 # - [git submodule update --init --recursive, Installing submodules]
