--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,5 +1,6 @@
 - defaults:
     link:
+      create: true
       relink: true
 
 - clean: ['~']
@@ -12,6 +13,7 @@
 - link:
      ~/.zshrc: .zshrc 
      ~/.gitconfig: .gitconfig
+     ~/Library/Application\ Support/org.dystroy.bacon/prefs.toml: bacon.toml
      ~/.config/karabiner/: config/karabiner
      ~/.config/nvim/init.lua: config/nvim/init.lua 
      ~/.config/rstudio/themes/joestheme.rstheme: config/rstudio/themes/joestheme.rstheme
