--- a/bacon.toml
+++ b/bacon.toml
@@ -1,31 +1,16 @@
-# This is a preferences file for the bacon tool
-# More info at https://github.com/Canop/bacon
-
-# Uncomment and change the value (true/false) to
-# specify whether bacon should start in summary mode
-#
-# summary = true
-
-# Uncomment and change the value (true/false) to
-# specify whether bacon should start with lines wrapped
-#
-# wrap = false
-
-# In "reverse" mode, the focus is at the bottom, item
-# order is reversed, and the status bar is on top
-#
-# reverse = true
-# Uncomment this to have bacon always export locations
-# This is equivalent to always adding -e to bacon commands
-# but can still be cancelled on specific launches with -E
-# 
-# See https://dystroy.org/bacon/config/#export-locations
-# 
-# export_locations = true
-# Uncomment and change the key-bindings you want to define
-# (some of those ones are the defaults)
+# https://github.com/Canop/bacon
+wrap = false
 [jobs.clippy]
-command = ["cargo", "clippy", "--all-targets", "--color", "always"]
+command = ["cargo",
+		"clippy",
+		"-- fix --"
+		"--all-targets",
+		"--color",
+		"always",
+		"-W clippy::pedantic",
+		"-W clippy::nursery",
+		"-W clippy::expect_used",
+		"-W clippy::unwrap_used"]
 need_stdout = true
 watch = ["tests", "benches", "examples"]
 [jobs.exs]
