--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
 - link:
      ~/.zshrc: .zshrc 
      ~/.gitconfig: .gitconfig
+     ~/.wezterm.lua: .wezterm.lua
      ~/Library/Application\ Support/org.dystroy.bacon/prefs.toml: bacon.toml
      ~/.config/karabiner/: config/karabiner
      ~/.config/nvim/init.lua: config/nvim/init.lua 
